# learn_c

./: .gitignore
c/: test.c
c/AverageWordLenght/: average_word_lenght.c
c/Greetings/: greetings.c
c/GuessNumber/: guess_number.c
c/StudentRegistration/: fileHandler.c  fileHandler.h  list.c  list.h  main.c  menu.c  menu.h  student.c  student.h  utils.c  utils.h
c/Students/: StudentsList.c
cpp/: sample0.cpp
cpp/AverageWordLenght/: average_word_lenght.cpp
cpp/Greetings/: greetings.cpp
cpp/GuessNumber/: guess_number.cpp
cpp/StudentRegistration/: CMakeLists.txt  ProblemToSolve.txt  build.sh
cpp/StudentRegistration/src/: example.cpp  main.cpp
cpp/StudentRegistration/src/student/: database.cpp  database.h  student.cpp  student.h
cpp/StudentRegistration/src/ui/studentUI/: studentUI.cpp  studentUI.h
cpp/StudentRegistration/src/ui/utils/: frameVisibility.cpp  frameVisibility.h
cpp/Students/: StudentsList.cpp
